--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 buildscript {
-    ext.kotlin_version = '1.3.21'
-    ext.support_version = '26.0.2'
-    ext.gradle_version = '2.3.3'
+    ext.kotlin_version = '1.3.72'
+    ext.support_version = '1.1.0-alpha03'
+    ext.gradle_version = '3.3.2'
     ext.rxkotlin_version = '2.1.0'
     ext.rxandroid_version = '2.0.1'
+    ext.room_version = '2.1.0-alpha06'
+    ext.constraint_layout = '1.1.3'
 
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
